examples/test/testpolicy15257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15257
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key12: value15
      key46: value15
      key18: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value13
      podSelector:
        matchLabels:
          key9: value4
